--- a/GCR.Web/GCR.Web.csproj
+++ b/GCR.Web/GCR.Web.csproj
@@ -202,6 +202,14 @@
     </Content>
     <Content Include="Content\images\background.jpg" />
     <Content Include="Content\images\bottom.jpg" />
+    <Content Include="Content\images\content-border.gif" />
+    <Content Include="Content\images\Error32.png" />
+    <Content Include="Content\images\fb.png" />
+    <Content Include="Content\images\Info32.png" />
+    <Content Include="Content\images\logo2.png" />
+    <Content Include="Content\images\menu-border2.gif" />
+    <Content Include="Content\images\Success32.png" />
+    <Content Include="Content\images\Warning32.png" />
     <Content Include="Content\site.css">
       <DependentUpon>site.less</DependentUpon>
     </Content>
