--- a/GCR.Model/App.config
+++ b/GCR.Model/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>
-    <add name="DB" connectionString="data source=QCIAPP3\SQL2012;initial catalog=WebpageTest;integrated security=True;MultipleActiveResultSets=True;App=CodeFirstGenerator" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+ <connectionStrings>
+     <add name="DB" connectionString="metadata=res://*/DB.csdl|res://*/DB.ssdl|res://*/DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=oxford\sql2012;initial catalog=GCR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+ </connectionStrings>
 </configuration>
