--- a/GCR.Web/Web.config
+++ b/GCR.Web/Web.config
@@ -17,6 +17,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-GCR.Web-20121126153636;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-GCR.Web-20121126153636.mdf" providerName="System.Data.SqlClient" />
+    <add name="DB" connectionString="metadata=res://*/DB.csdl|res://*/DB.ssdl|res://*/DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=oxford\sql2012;initial catalog=GCR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
