--- a/GCR.Business/GCR.Business.csproj
+++ b/GCR.Business/GCR.Business.csproj
@@ -45,15 +45,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistrationModule.cs" />
+    <Compile Include="Services\TeamService.cs" />
+    <Compile Include="Services\ScheduleService.cs" />
+    <Compile Include="Services\SeasonService.cs" />
+    <Compile Include="Services\NewsService.cs" />
+    <Compile Include="Services\MemberService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GCR.Core\GCR.Core.csproj">
       <Project>{354e0669-442b-4430-875d-97444b384fe9}</Project>
       <Name>GCR.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\GCR.Model\GCR.Model.csproj">
-      <Project>{d4e079f5-3acd-460f-a1ea-30ed20f667f0}</Project>
-      <Name>GCR.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
