--- a/GCR.Web/GCR.Web.csproj
+++ b/GCR.Web/GCR.Web.csproj
@@ -194,6 +194,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\BaseController.cs" />
+    <Compile Include="Infrastructure\Enums.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Member\MemberViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
