--- a/GCR.Web/Web.config
+++ b/GCR.Web/Web.config
@@ -5,9 +5,6 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
       <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
       <section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
@@ -16,8 +13,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-GCR.Web-20121126153636;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-GCR.Web-20121126153636.mdf" providerName="System.Data.SqlClient" />
-    <add name="DB" connectionString="metadata=res://*/DB.csdl|res://*/DB.ssdl|res://*/DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=oxford\sql2012;initial catalog=GCR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DB" connectionString="Data Source=qciapp3\sql2012;Initial Catalog=WebpageTest;Integrated Security=True;MultipleActiveResultSets=True;App=GCR.Web" providerName="System.Data.SqlClient" />-->
+    <add name="DB" connectionString="Data Source=oxford\sql2012;Initial Catalog=GCR;Integrated Security=True;MultipleActiveResultSets=True;App=GCR.Web" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -93,15 +90,7 @@
      -->
     <!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). -->
     <legacyHMACWarning enabled="0" />
-    
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v11.0" />
-      </parameters>
-    </defaultConnectionFactory>
-  </entityFramework>
   <system.net>
     <defaultProxy enabled="true" />
     <settings>
