--- a/GCR.Core/GCR.Core.csproj
+++ b/GCR.Core/GCR.Core.csproj
@@ -55,8 +55,6 @@
     <Reference Include="WebActivator">
       <HintPath>..\packages\WebActivator.1.5.2\lib\net40\WebActivator.dll</HintPath>
     </Reference>
-    <Reference Include="WebMatrix.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="WebMatrix.WebData, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
@@ -101,9 +99,12 @@
     <Compile Include="Entities\webpages_Roles.cs">
       <DependentUpon>DB.tt</DependentUpon>
     </Compile>
-    <Compile Include="Identity\CurrentUser.cs" />
-    <Compile Include="Identity\CustomPrincipal.cs" />
-    <Compile Include="Identity\PrincipalProvider.cs" />
+    <Compile Include="Security\OAuthProvider.cs" />
+    <Compile Include="Security\CurrentUser.cs" />
+    <Compile Include="Security\CustomPrincipal.cs" />
+    <Compile Include="Security\ISecurityProvider.cs" />
+    <Compile Include="Security\OAuthResult.cs" />
+    <Compile Include="Security\PrincipalIocProvider.cs" />
     <Compile Include="IoC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrationModule.cs" />
@@ -114,6 +115,7 @@
     <Compile Include="Repositories\ITeamRepository.cs" />
     <Compile Include="Repositories\INewsRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Security\UserCreationException.cs" />
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\INewsService.cs" />
     <Compile Include="Services\ISeasonService.cs" />
