--- a/GCR.Web/packages.config
+++ b/GCR.Web/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CodeCarvings.Piczard" version="1.2.3.2" targetFramework="net45" />
+  <package id="CodeCarvings.Piczard.ImageUpload" version="3.0.2" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net45" />
