--- a/GCR.Web/Web.config
+++ b/GCR.Web/Web.config
@@ -18,8 +18,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <!--<add name="DB" connectionString="Data Source=qciapp3\sql2012;Initial Catalog=WebpageTest;Integrated Security=True;MultipleActiveResultSets=True;App=GCR.Web" providerName="System.Data.SqlClient" />-->
-    <add name="DB" connectionString="Data Source=oxford\sql2012;Initial Catalog=GCR;Integrated Security=True;MultipleActiveResultSets=True;App=GCR.Web" providerName="System.Data.SqlClient" />
+    <add name="DB" connectionString="Data Source=qciapp3\sql2012;Initial Catalog=WebpageTest;Integrated Security=True;MultipleActiveResultSets=True;App=GCR.Web" providerName="System.Data.SqlClient" />
+   <!-- <add name="DB" connectionString="Data Source=oxford\sql2012;Initial Catalog=GCR;Integrated Security=True;MultipleActiveResultSets=True;App=GCR.Web" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -27,6 +27,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="UploadPath" value="Uploads" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
