--- a/GCR.Model/GCR.Model.csproj
+++ b/GCR.Model/GCR.Model.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Partials\DB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrationModule.cs" />
+    <Compile Include="Repositories\HomePagePhotoRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="Repositories\MemberRepository.cs" />
     <Compile Include="Repositories\NewsRepository.cs" />
