--- a/GCR.Core/GCR.Core.csproj
+++ b/GCR.Core/GCR.Core.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Entities\News.cs">
       <DependentUpon>DB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entities\Partials\HomePagePhoto.cs" />
     <Compile Include="Entities\Partials\Member.cs" />
     <Compile Include="Entities\Partials\News.cs" />
     <Compile Include="Entities\Partials\Schedule.cs" />
